--- a/asset/css/custom.css
+++ b/asset/css/custom.css
@@ -8,10 +8,14 @@ body {
 }
 
 
-/*
- * Global add-ons
- */
-
+#site-header{
+  background-color: #e1e9f7;
+  height: 80px;
+}
+a.navbar-brand{
+  margin:0;
+  padding:0px 0px 0px 5px;
+}
 .sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
@@ -40,7 +44,6 @@ body {
 }
 
 .sidebar{
-  margin-top:15px;
   padding:0px;
   background-color: #E3EDF7;
 }
@@ -70,7 +73,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 81px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -106,6 +109,7 @@ body {
 
 .main {
   padding: 15px !important;
+  top : 31px;
 }
 .go-btn{
   background-color: #f39323;
