--- a/asset/css/custom.css
+++ b/asset/css/custom.css
@@ -9,12 +9,12 @@ body {
 
 
 #site-header{
-  background-color: #e1e9f7;
+  background-color: #FAFAFB;
   height: 80px;
+  box-shadow: 0 4px 2px -2px #ccc;
 }
 a.navbar-brand{
   margin:0;
-  padding:0px 0px 0px 5px;
 }
 .sub-header {
   padding-bottom: 10px;
@@ -73,7 +73,7 @@ a.navbar-brand{
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 81px;
+    top: 80px;
     bottom: 0;
     left: 0;
     z-index: 1000;
